# mesh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml
anthropic/: CHANGELOG.md  Cargo.toml  README.md
anthropic/src/: client.rs  config.rs  error.rs  lib.rs
anthropic/src/completion/: message.rs  mod.rs  stream.rs
anthropic/src/models/: claude.rs
examples/anthropic-basic/: Cargo.toml
examples/anthropic-basic/src/: main.rs
examples/anthropic-stream/: Cargo.toml
examples/anthropic-stream/src/: main.rs
examples/groq-chat/: Cargo.toml
examples/groq-chat/src/: main.rs
examples/openai-chat/: Cargo.toml  README.md
examples/openai-chat/src/: main.rs
examples/perplexity-chat/: Cargo.toml  README.md
examples/perplexity-chat-completion/: Cargo.toml  README.md
examples/perplexity-chat-completion/src/: main.rs
examples/perplexity-chat/src/: main.rs
examples/replicate-basic/: Cargo.toml  README.md
examples/replicate-basic/src/: main.rs
groq/: Cargo.toml  README.md
groq/src/: client.rs  config.rs  error.rs  lib.rs
groq/src/chat/: message.rs  mod.rs
groq/src/models/: mod.rs
mesh/: CHANGELOG.md  Cargo.toml  README.md
mesh/src/: lib.rs
openai/: Cargo.toml  README.md
openai/src/: client.rs  config.rs  error.rs  lib.rs
openai/src/chats/: message.rs  mod.rs
openai/src/embeddings/: mod.rs
openai/src/images/: mod.rs
openai/src/models/: gpt.rs  mod.rs  o1.rs
openai/src/moderations/: mod.rs
perplexity/: Cargo.toml  README.md
perplexity/src/: client.rs  config.rs  lib.rs
replicate/: Cargo.toml  README.md
replicate/src/: client.rs  config.rs  error.rs
