[package]
name = "mesh"
version = "0.1.0"
edition = "2021"
authors = ["Roushou <hello@roushou.sh>"]
description = "Rust AI SDK"
readme = "README.md"
homepage = "https://github.com/roushou/mesh"
repository = "https://github.com/roushou/mesh"
license = "MIT AND Apache-2.0"
keywords = ["ai", "anthropic", "rust"]

[dependencies]
anthropic-rs = { path = "../anthropic", version = "0.1.5" }
