[package]
name = "mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anthropic-rs = { path = "../anthropic", version = "0.1.6" }
replic = { path = "../replicate", version = "0.1.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
