[package]
name = "perplexity"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Perplexity Rust SDK"
homepage.workspace = true
documentation.workspace = true
repository = "https://github.com/roushou/mesh"
readme = "README.md"
license.workspace = true
keywords = ["ai", "chat", "perplexity"]

[dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
